fix: change language selector position on mobile
Original position causes a bug: the page has unwanted extra space to the
right and bottom that causes both vertical and horizontal scrolling to
appear event on the home page.

--- a/docs/assets/css/elements.css
+++ b/docs/assets/css/elements.css
@@ -5,3 +5,11 @@
 nav.md-tabs {
     opacity: 0.85;
 }
+
+/* Fix language selector position on mobile */
+@media screen and (max-width: 76.1875em) {
+    .md-header .md-header__option .md-select .md-select__inner {
+        left: auto;
+        right: -100%;
+    }
+}
